[metadata]
name = recovery
version = 0.0.1
author = Wenfeng Zhou, Ye Huang
[options]
packages = find:
py_modules =
    src/classes/model
    src/classes/response
    src/models/correct/utils/config
    src/models/correct/algorithm/model
    src/models/correct/pipeline/evaluate
    src/models/correct/pipeline/train
    src/models/correct/utils/data
    src/models/correct/utils/hash
    src/models/keyframe/framework/model
    src/models/keyframe/pipeline/combine_datasets
    src/models/keyframe/pipeline/evaluate
    src/models/keyframe/pipeline/inference
    src/models/keyframe/pipeline/make_datasets
    src/models/keyframe/pipeline/make_splits
    src/models/keyframe/pipeline/train
    src/models/keyframe/utils/config
    src/models/keyframe/utils/data
    src/models/keyframe/utils/summary
    src/models/keyframe/utils/video
    src/services/article
    src/services/detail
    src/services/model
    src/services/posts
    src/services/task
    src/services/user
    src/utils/database
    src/utils/encoder
    src/utils/logger
    src/utils/model
    src/utils/pose
install_requires =
    absl-py==1.4.0
    aiofiles==23.1.0
    Authlib==1.2.0
    backcall==0.2.0
    cachetools==5.3.1
    casestyle==0.0.4
    certifi==2022.12.7
    cffi==1.15.1
    charset-normalizer==2.1.1
    colorama==0.4.6
    cryptography==40.0.1
    cycler==0.11.0
    decorator==5.1.1
    fonttools==4.38.0
    google-auth==2.21.0
    google-auth-oauthlib==0.4.6
    greenlet==2.0.2
    grpcio==1.56.0
    h5py==3.8.0
    hashids==1.3.1
    html5tagger==1.3.0
    httptools==0.5.0
    idna==3.4
    importlib-metadata==6.3.0
    ipython==7.34.0
    jedi==0.18.2
    joblib==1.2.0
    kiwisolver==1.4.4
    Markdown==3.4.3
    MarkupSafe==2.1.3
    matplotlib==3.5.3
    matplotlib-inline==0.1.6
    multidict==6.0.4
    numpy==1.21.6
    oauthlib==3.2.2
    opencv-python==4.7.0.72
    packaging==23.1
    parso==0.8.3
    pickleshare==0.7.5
    Pillow==9.5.0
    prompt-toolkit==3.0.38
    protobuf==3.20.3
    pyasn1==0.5.0
    pyasn1-modules==0.3.0
    pycparser==2.21
    pycryptodome==3.17
    pydantic==1.10.7
    Pygments==2.15.1
    PyMySQL==1.0.3
    pyparsing==3.1.0
    python-dateutil==2.8.2
    requests==2.28.1
    requests-oauthlib==1.3.1
    rsa==4.9
    sanic==23.3.0
    Sanic-Cors==2.2.0
    sanic-routing==22.8.0
    scikit-learn==1.0.2
    scipy==1.7.3
    six==1.16.0
    SQLAlchemy==2.0.9
    tensorboard==2.11.2
    tensorboard-data-server==0.6.1
    tensorboard-plugin-wit==1.8.1
    tensorboardX==2.6
    threadpoolctl==3.1.0
    tomli==2.0.1
    torch==1.13.1
    torchaudio==0.13.1
    torchvision==0.14.1
    tqdm==4.65.0
    tracerite==1.1.0
    traitlets==5.9.0
    typing_extensions==4.5.0
    urllib3==1.26.13
    wcwidth==0.2.6
    websockets==11.0.1
    Werkzeug==2.2.3
    zipp==3.15.0